Increase tooltip width by 75% to prevent text wrapping

--- a/src/scss/components/_chat.scss
+++ b/src/scss/components/_chat.scss
@@ -129,7 +129,7 @@ li.chat-message {
             transition: opacity 0.3s;
 
             &.narrow {
-                width: 150px;
+                width: 260px;
             }
 
             &.wide {
